fixed overflow on contact email

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@ $linearwhite: linear-gradient(90deg, rgba(251,252,255,1) 0%, rgba(218,233,255,.9
 
 :root {
   font-size: 16px;
-  font-family: 'Lato', Lucida, sans-serif;;
+  font-family: 'Lato', Lucida, sans-serif;
 }
 
 body {
@@ -330,7 +330,6 @@ li {
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
- width: 21rem;
  height: 0;
  position: absolute;
 }
@@ -346,8 +345,9 @@ li {
   transition: 350ms ease-in-out;
   transform: translateY(10%);
   width: 21rem;
-  background-color: rgba(0, 0, 0, .50);
+  background-color: rgba(0, 0, 0, .25);
   border-radius: 10px;
+  font-size: 1rem;
   a {
     color: white;
   }
@@ -380,6 +380,7 @@ li {
   animation-name: copied;
   animation-duration: 9s;
   text-shadow: 2px 2px 4px $brown;
+  font-size: .9rem;
 }
 
 //Name Section
