--- a/src/Responsive.scss
+++ b/src/Responsive.scss
@@ -62,7 +62,7 @@ $linearwhite: linear-gradient(90deg, rgba(251,252,255,1) 0%, rgba(218,233,255,.9
     background-color: rgba(0, 0, 0, .25);
     top: 12vh;
     right: 2vw;
-    width: 43vw;
+    width: 21rem;
   }
   
   .profile-left, .profile-right {
